<package format="3">
  <name>ign_tutorials</name>
  <version>0.5.0</version>
  <description>Demo to showcase Ignition Gazebo simulation with ROS.</description>
  <license>Apache 2.0</license>
  <maintainer email="jjperez@ekumenlabs.com">Jorge J. Perez</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Only support for Dome at the moment.-->
  <depend condition="$IGNITION_VERSION == dome">ignition-gazebo4</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo4</depend>

  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_image</exec_depend>
  <!-- See https://github.com/osrf/ros_ign/issues/40 -->
  <!--exec_depend>ros_ign_point_cloud</exec_depend-->
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
